fix: adjust icon alignment in maintenance section

--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -391,8 +391,7 @@ section.manutencao{
 }
 
 .manutencao i{
-    padding-left: 500px;
-    align-items: center;
+    text-align: center;
     font-size: 200px;
     color: #1FEDC8;
 }
